--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           cd boxdir
           chmod +x gradlew
-          ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode --stacktrace all
+          ./gradlew assemblerelease --build-cache --parallel --daemon --stacktrace --warning-mod all
 
 #      - name: Prepare App
 #        run: |
