--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -2,6 +2,14 @@ name: tvbox build
 
 on:
   workflow_dispatch:
+    inputs:
+      author:
+        description: 'author'
+        required: true
+        type: choice
+        options:
+        - 'q215613905'
+        - 'takagen99'
 
 jobs:
   build:
@@ -14,17 +22,22 @@ jobs:
 
       - name: Clone source code
         run: |
-          git clone --depth 1 https://github.com/q215613905/TVBoxOS.git boxdir
+          if [ "${{ inputs.author }}" == "q215613905" ]; then
+            git clone --depth 1 https://github.com/q215613905/TVBoxOS.git boxdir
+            ln -s tvbox tvboxpatch
+          else
+            git clone --depth 1 https://github.com/takagen99/Box.git boxdir
+            ln -s tvbox-takagen99 tvboxpatch
+            cp -f tvboxpatch/film.png boxdir/app/src/main/res/drawable/app_icon.png
+          fi
           #sed -i 's/putDefault(HawkConfig.HOME_REC.*/putDefault(HawkConfig.HOME_REC, 1);/g' boxdir/app/src/main/java/com/github/tvbox/osc/base/App.java
           #sed -i 's/urlBean.infoList = infoList;/urlBean.infoList = infoList;video.sourceKey=vod_play_from;/g' boxdir/app/src/main/java/com/github/tvbox/osc/bean/AbsJson.java
 
           cd boxdir
           sudo -E apt-get -y install dos2unix
-          dos2unix ../tvbox/*.patch
+          dos2unix ../tvboxpatch/*.patch
           dos2unix app/src/main/java/com/github/tvbox/osc/ui/activity/HomeActivity.java
-          find ../tvbox -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
-          #git apply --ignore-space-change --ignore-whitespace --whitespace=nowarn ../tvbox.patch
-          #cp -f ../film.png app/src/main/res/drawable/app_icon.png
+          find ../tvboxpatch -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
 
       - name: Build with Gradle
         run: |
