--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -10,6 +10,7 @@ on:
         options:
         - 'q215613905'
         - 'takagen99'
+        - 'chengxue2020'
 
 jobs:
   build:
@@ -25,8 +26,16 @@ jobs:
           if [ "${{ inputs.author }}" == "q215613905" ]; then
             git clone --depth 1 https://github.com/q215613905/TVBoxOS.git boxdir
             ln -s tvbox tvboxpatch
-          else
+          elif [ "${{ inputs.author }}" == "takagen99" ]; then
             git clone --depth 1 https://github.com/takagen99/Box.git boxdir
+            sed -i 's|applicationId .*|applicationId '\''com.github.tvbox.osc.muziling'\''|g' boxdir/app/build.gradle
+            sed -i 's|<string name="app_source">.*|<string name="app_source">https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json</string>|g' boxdir/app/src/main/res/values-zh/strings.xml
+            ln -s tvbox-takagen99 tvboxpatch
+            cp -f tvboxpatch/film.png boxdir/app/src/main/res/drawable/app_icon.png
+          else
+            git clone --depth 1 https://github.com/chengxue2020/takagen99.git boxdir
+            sed -i 's|applicationId .*|applicationId '\''com.github.tvbox.osc.muziling'\''|g' boxdir/app/build.gradle
+            sed -i 's|<string name="app_source">.*|<string name="app_source">https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json</string>|g' boxdir/app/src/main/res/values-zh/strings.xml
             ln -s tvbox-takagen99 tvboxpatch
             cp -f tvboxpatch/film.png boxdir/app/src/main/res/drawable/app_icon.png
           fi
