--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -42,17 +42,21 @@ jobs:
           #sed -i 's/putDefault(HawkConfig.HOME_REC.*/putDefault(HawkConfig.HOME_REC, 1);/g' boxdir/app/src/main/java/com/github/tvbox/osc/base/App.java
           #sed -i 's/urlBean.infoList = infoList;/urlBean.infoList = infoList;video.sourceKey=vod_play_from;/g' boxdir/app/src/main/java/com/github/tvbox/osc/bean/AbsJson.java
 
-          sed -i 's/annotation:1.3.0/annotation:1.5.0/g' boxdir/player/build.gradle
-          sed -i 's/:dkplayer-ui:3.3.5/:dkplayer-ui:3.3.7/g' boxdir/player/build.gradle
-          sed -i 's/:2.14.2/:2.18.3/g' boxdir/player/build.gradle
-          wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaSourceHelper.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaSourceHelper.java
-          wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayerFactory.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayerFactory.java
-          wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayer.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayer.java
+          #sed -i 's/annotation:1.3.0/annotation:1.5.0/g' boxdir/player/build.gradle
+          #sed -i 's/:dkplayer-ui:3.3.5/:dkplayer-ui:3.3.7/g' boxdir/player/build.gradle
+          #sed -i 's/:2.14.2/:2.18.3/g' boxdir/player/build.gradle
+          #wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaSourceHelper.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaSourceHelper.java
+          #wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayerFactory.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayerFactory.java
+          #wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayer.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayer.java
+          #sed -i 's/compileSdkVersion .*/compileSdkVersion 33/g' boxdir/player/build.gradle
+          #sed -i 's/minSdkVersion .*/minSdkVersion 21/g' boxdir/player/build.gradle
+          sed -i 's/exoVersion = "2.16.0"/exoVersion = "2.18.3"/g' boxdir/build.gradle
+          sed -i 's/annotation:1.3.0/annotation:1.5.0/g' boxdir/app/build.gradle
+          sed -i 's/:dkplayer-ui:3.3.5/:dkplayer-ui:3.3.7/g' boxdir/app/build.gradle
+
           sed -i 's/compileSdkVersion .*/compileSdkVersion 33/g' boxdir/app/build.gradle
-          sed -i 's/compileSdkVersion .*/compileSdkVersion 33/g' boxdir/player/build.gradle
           sed -i 's/compileSdkVersion .*/compileSdkVersion 33/g' boxdir/quickjs/build.gradle
           sed -i 's/minSdkVersion .*/minSdkVersion 21/g' boxdir/app/build.gradle
-          sed -i 's/minSdkVersion .*/minSdkVersion 21/g' boxdir/player/build.gradle
           sed -i 's/minSdkVersion .*/minSdkVersion 21/g' boxdir/quickjs/build.gradle
           sed -i 's/import okhttp3.internal.Version;/import okhttp3.internal.Util;/g' boxdir/app/src/main/java/com/github/tvbox/osc/util/OkGoHelper.java
           sed -i 's/Version.userAgent()/Util.userAgent/g' boxdir/app/src/main/java/com/github/tvbox/osc/util/OkGoHelper.java
