--- a/.github/workflows/build-tvbox.yml
+++ b/.github/workflows/build-tvbox.yml
@@ -50,7 +50,7 @@ jobs:
           #wget https://raw.githubusercontent.com/Doikki/DKVideoPlayer/3.3.7/dkplayer-players/exo/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayer.java -q --no-check-certificate -O boxdir/player/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaPlayer.java
           #sed -i 's/compileSdkVersion .*/compileSdkVersion 33/g' boxdir/player/build.gradle
           #sed -i 's/minSdkVersion .*/minSdkVersion 21/g' boxdir/player/build.gradle
-          sed -i 's/exoVersion = "2.16.0"/exoVersion = "2.18.3"/g' boxdir/build.gradle
+          #sed -i 's/exoVersion = "2.16.0"/exoVersion = "2.18.3"/g' boxdir/build.gradle
           sed -i 's/annotation:1.3.0/annotation:1.5.0/g' boxdir/app/build.gradle
           sed -i 's/:dkplayer-ui:3.3.5/:dkplayer-ui:3.3.7/g' boxdir/app/build.gradle
 
@@ -65,12 +65,14 @@ jobs:
           sed -i 's/PublicSuffixDatabase.get()/PublicSuffixDatabase.Companion.get()/g' boxdir/app/src/main/java/okhttp3/dnsoverhttps/DnsOverHttps.java
           sed -i 's/com.squareup.okhttp3:okhttp:3.12.1/com.squareup.okhttp3:okhttp:4.10.0/g' boxdir/app/build.gradle
           sed -i 's/com.squareup.okio:okio:2.6.0/com.squareup.okio:okio:2.10.0/g' boxdir/app/build.gradle
+          sed -i 's/com.github.getActivity:XXPermissions:13.6/com.github.getActivity:XXPermissions:16.8/g' boxdir/app/build.gradle
 
           cd boxdir
           sudo -E apt-get -y install dos2unix
           dos2unix ../tvboxpatch/*.patch
           dos2unix app/src/main/java/com/github/tvbox/osc/ui/activity/HomeActivity.java
           find -L ../tvboxpatch -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 --no-backup-if-mismatch -i
+          sed -i 's/C.CONTENT_TYPE_/C.TYPE_/g' app/src/main/java/xyz/doikki/videoplayer/exo/ExoMediaSourceHelper.java
 
       - name: Build with Gradle
         run: |
