--- a/.github/workflows/build-360t7.yml
+++ b/.github/workflows/build-360t7.yml
@@ -117,7 +117,7 @@ jobs:
         sed -i 's|procd_append_param command -confdir|procd_append_param command -c|g' package/mycustom/luci-app-xray/fw3/root/etc/init.d/xray_fw3
         sed -i 's|procd_append_param command /var/etc/xray|procd_append_param command /var/etc/xray/config_custom.json|g' package/mycustom/luci-app-xray/fw3/root/etc/init.d/xray_fw3
         sed -i 's/service dnsmasq restart/atest=btest/g' package/mycustom/luci-app-xray/fw3/root/etc/hotplug.d/iface/01-transparent-proxy-ipset.fw3
-        sed -i 's|option wan_bp_list '.*|option wan_bp_list '/etc/mosdns/rule/geoip_cn.txt'|g' package/mycustom/luci-app-xray/fw3/root/etc/config/xray_fw3
+        sed -i "s|option wan_bp_list '.*|option wan_bp_list '/etc/mosdns/rule/geoip_cn.txt"|g' package/mycustom/luci-app-xray/fw3/root/etc/config/xray_fw3
         
         #git clone --depth 1 https://github.com/Mitsuhaxy/luci-i18n-xray-zh-cn.git package/mycustom/luci-i18n-xray-zh-cn
         #sed -i '/include $(INCLUDE_DIR)\/package.mk/d' package/mycustom/luci-i18n-xray-zh-cn/Makefile
@@ -137,8 +137,6 @@ jobs:
         git clone --depth 1 -b master https://github.com/garypang13/luci-theme-edge package/mycustom/luci-theme-edge
 
         git clone --depth=1 https://github.com/kuoruan/openwrt-upx.git package/mycustom/openwrt-upx
-        
-        
         
         #for shadowsocks, impletement encrypt algorithm
         mv hanwckfop/package/libs/openssl/Config.in package/libs/openssl/Config.in
@@ -176,9 +174,7 @@ jobs:
         svn co https://github.com/openwrt/packages/trunk/lang/golang  feeds/packages/lang/golang
         
         svn co https://github.com/openwrt/packages/trunk/net/natmap  package/mycustom/natmap
-        
         svn co https://github.com/openwrt/luci/trunk/applications/luci-app-natmap  package/mycustom/luci-app-natmap
-        
         sed -i 's|include.*luci.mk|include $(TOPDIR)/feeds/luci/luci.mk|g' package/mycustom/luci-app-natmap/Makefile
         
         ./scripts/feeds install -a
